applications/authorization-server/env/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: quizmeup
  name: authorization-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: authorization-server.quizmeup.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authorization-server-service
                port:
                  number: 8080
